--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Twig filters to change inline SVGs. ",
     "type": "craft-plugin",
     "license": "proprietary",
+    "version": "v0.5.0",
     "support": {
         "email": "support@solvr.no"
     },
