--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": ">=8.0.2",
         "ext-dom": "*",
-        "craftcms/cms": "^4.5.0"
+        "craftcms/cms": "^4.5.0|^5.0"
     },
     "require-dev": {
         "craftcms/ecs": "dev-main",
